<resources>
    <string name="app_name">NUMAD18S-AkshaySadarangani</string>

    <!-- Buttons -->
    <string name="about_btn_label">About</string>
    <string name="error_btn_label">Generate Error</string>
    <string name="dictionary_btn_label">Dictionary</string>
    <string name="clear_btn_label">Clear</string>
    <string name="scroggle_btn_label">Word Game</string>

    <!-- About -->
    <string name="about_name">Akshay Sadarangani</string>
    <string name="about_email">sadarangani.a@husky.neu.edu</string>
    <string name="about_year">2nd Year Grad Student</string>
    <string name="headshot_desc">Headshot Image</string>

    <!-- Dictionary -->
    <string name="title_activity_dictionary">Test Dictionary</string>
    <string name="search_hint">Enter search term</string>
    <string name="search_title">Search</string>
    <string name="ack_btn_label">Acknowledgements</string>
    <string name="ack_url1">https://developer.android.com/guide/topics/ui/layout/recyclerview</string>
    <string name="ack_title">LINKS</string>
    <string name="ack_url2">https://stackoverflow.com/questions/33671196/floatingactionbutton-with-text-instead-of-image</string>

    <!-- Scroggle -->

    <string name="long_app_name">SCROGGLE</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="about_text">\This game is played just like
regular Boggle with one difference: to win a tile
you have to win a smaller game of Scroggle inside that tile.\n\
\n\
Play two phases with scores doubling in Phase 2 but in reduced time.
</string>
    <string name="pause_label">Pause</string>
    <string name="submit_label">Submit</string>
    <string name="volume_on_label">Volume On</string>
    <string name="howto_label">How to Play</string>
    <string name="ack_text">Hello Android UTTT for boilerplate\n\nIcons From Icons8\n\nAnimation: https://stackoverflow.com/questions/9448732/shaking-wobble-view-animation-in-android\n\nCountdown: https://stackoverflow.com/questions/8306374/android-how-to-pause-and-resume-a-count-down-timer</string>

    <string name="title_activity_welcome">How to Play</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">WELCOME</string>
    <string name="slide_1_desc">Select letters to form words in each board to score points. Finish before the timer runs out to score bonus points.</string>

    <string name="slide_2_title">FANTASTIC</string>
    <string name="slide_2_desc">Select 3 or more letters in the order of the word and click the check mark to submit. Longer words score bigger.</string>


    <string name="slide_3_title">NAVIGATION</string>
    <string name="slide_3_desc">Use the Volume button to toggle game sounds\nClear button to clear all selected tiles\nSubmit button to submit a word</string>

    <string name="slide_4_title">SCORING</string>
    <string name="slide_4_desc">Score points based on scrabble letters and word length. Earn bonus scores when you beat the clock and for using all 9 letters of a block. \nNote that you lose points for wrong words so it\'s better to select a smaller valid word than an incorrect longer one.</string>

    <string name="play_again_desc">To see the game instructions again, click How to Play in the Word Game screen</string>
    <string name="play_again">Play Again</string>
    <string name="leaderboard_label">LEADERBOARD</string>
    <string name="leaderboard_subtitle">GLOBAL LEADERS</string>
    <string name="scoreboard_label">SCOREBOARD</string>
    <string name="scoreboard_subtitle">YOUR TOP 10 SCORES</string>
    <string name="scoreboard_title">SCOREBOARD</string>

    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>
