<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    tools:context=".GameActivity">
    <ImageButton
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_low"
        android:src="@drawable/pause"
        android:text="@string/pause_label"/>

    <ImageButton
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_low"
        android:src="@drawable/restart"
        android:text="@string/restart_label"/>
    <ImageButton
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_low"
        android:src="@drawable/home"
        android:text="@string/main_menu_label"/>

</LinearLayout>
    <!--android:padding="@dimen/control_padding"-->