<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
   <GridLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       tools:context=".GameActivity">
      <include android:id="@+id/large1" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="0" android:layout_row="0"/>
      <include android:id="@+id/large2" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="1" android:layout_row="0"/>
      <include android:id="@+id/large3" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="2" android:layout_row="0"/>
      <include android:id="@+id/large4" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="0" android:layout_row="1"/>
      <include android:id="@+id/large5" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="1" android:layout_row="1"/>
      <include android:id="@+id/large6" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="2" android:layout_row="1"/>
      <include android:id="@+id/large7" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="0" android:layout_row="2"/>
      <include android:id="@+id/large8" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="1" android:layout_row="2"/>
      <include android:id="@+id/large9" layout="@layout/small_board"
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:layout_margin="@dimen/small_board_margin"
          android:layout_column="2" android:layout_row="2"/>
   </GridLayout>

   <LinearLayout android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       >

      <ImageButton
          android:id="@+id/button_volume_on"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:elevation="@dimen/elevation_low"
          android:src="@drawable/volume_on"
          android:contentDescription="@string/volume_on_label"/>

      <ImageButton
          android:id="@+id/button_clear"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/clear"
          android:elevation="@dimen/elevation_low"
          android:contentDescription="@string/clear_btn_label"/>

      <ImageButton
          android:id="@+id/button_submit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/submit"
          android:elevation="@dimen/elevation_low"
          android:contentDescription="@string/submit_label"/>

   </LinearLayout>
   <TextView
       android:id="@+id/word"
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:textColor="@color/colorAccent"
       android:textStyle="bold"
       android:textAllCaps="true"
       android:textAlignment="center"
       android:maxLines="50"
       android:textSize="12sp" />
</LinearLayout>